Move reset/forgot-password to be requests under /users. Refactor tokenController to accept invite and reset-passwords requets.
